arreglo js, funciona input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<textarea name="texto" id="comment" placeholder="Añade un comentario..."></textarea>
 			<hr>
 			<button type="button" id="boton">Twetts</button>
-			<input type= "text" name = "caracteres" id="caracteres" class="caracteres" ></input>	
+			<p id="limite">140</p>	
 		</form>	
 	</section>
 
